update pre-tx and volume calculation & uaw job support date/week/month

--- a/notebooks/pre-tx-and-volume-calculation.ipynb
+++ b/notebooks/pre-tx-and-volume-calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c031afca",
    "metadata": {},
    "outputs": [],
@@ -12,25 +12,78 @@
     "# parser=argparse.ArgumentParser()\n",
     "\n",
     "# parser.add_argument(\"-b\", \"--base_path\", help=\"S3 bucket base path\", required=True)\n",
-    "# parser.add_argument(\"-d\", \"--date\", help=\"Calculate date\", required=True)\n",
+    "# parser.add_argument(\"-s\", \"--start\", help=\"Start date to calculate\", required=True)\n",
+    "# parser.add_argument(\"-e\", \"--end\", help=\"End date to calculate\", required=True)\n",
     "# parser.add_argument(\"-n\", \"--name\", help=\"Name of chain to calculate [bsc|eth|polygon]\", required=True)\n",
     "# parser.add_argument(\"-s\", \"--symbol\", help=\"Symbol of chain to calculate [BNB|ETH|MATIC]\", required=True)\n",
     "\n",
-    "# args=parser.parse_args()"
+    "# args=parser.parse_args()\n",
+    "\n",
+    "# base_path = args.base_path\n",
+    "# start = args.start\n",
+    "# end = args.end\n",
+    "# name = args.name # [bsc|eth|polygon]\n",
+    "# symbol = args.symbol  # [BNB|ETH|MATIC]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36addc26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_path = \"s3a://octan-labs-bsc/export-by-date\"\n",
     "base_path = \".\"\n",
-    "date = \"2023-06-06\"\n",
-    "name = \"bsc\" # \n",
-    "symbol = \"BNB\" # "
+    "start = \"2020-10-31\"\n",
+    "end = \"2020-10-31\"\n",
+    "name = \"bsc\" # [bsc|eth|polygon]\n",
+    "symbol = \"BNB\" # [BNB|ETH|MATIC]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e42fdf64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def get_dates_in_range(start, end):\n",
+    "    # Convert start and end strings to datetime objects\n",
+    "    start_date = datetime.strptime(start, \"%Y-%m-%d\")\n",
+    "    end_date = datetime.strptime(end, \"%Y-%m-%d\")\n",
+    "\n",
+    "    # Create a list to store the dates within the range\n",
+    "    dates_list = []\n",
+    "\n",
+    "    # Loop through the dates and append them to the list\n",
+    "    current_date = start_date\n",
+    "    while current_date <= end_date:\n",
+    "        dates_list.append(current_date.strftime(\"%Y-%m-%d\"))\n",
+    "        current_date += timedelta(days=1)\n",
+    "\n",
+    "    return dates_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b453980f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = get_dates_in_range(start, end)\n",
+    "\n",
+    "num_of_date = len(dates)\n",
+    "time_range = \"\"\n",
+    "\n",
+    "if(num_of_date == 1):\n",
+    "    time_range = \"date\"\n",
+    "elif(num_of_date < 7 or num_of_date == 7):\n",
+    "    time_range = \"week\"\n",
+    "else:\n",
+    "    time_range = \"month\""
    ]
   },
   {
@@ -43,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a46c44aa",
    "metadata": {},
    "outputs": [],
@@ -54,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "253ee044",
    "metadata": {},
    "outputs": [
@@ -62,14 +115,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/12 02:46:25 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "23/07/17 10:48:18 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
-    "    .appName(\"PreTxnsCalculator\") \\\n",
+    "    .appName(\"PreTxAndVolumeCalculator\") \\\n",
     "    .getOrCreate()"
    ]
   },
@@ -83,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "44a19283",
    "metadata": {},
    "outputs": [],
@@ -100,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7e65627d",
    "metadata": {},
    "outputs": [],
@@ -122,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b173992b",
    "metadata": {},
    "outputs": [],
@@ -137,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1f39c5dc",
    "metadata": {},
    "outputs": [],
@@ -145,29 +198,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "57442cfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "token_transfers_df = spark.read.format(\"parquet\") \\\n",
-    "    .load(\"{base_path}/token_transfers/date={date}/*/*.parquet\".format(base_path = base_path, date = date))"
+    "    .load(list(map(lambda date: \"{base_path}/token_transfers/date={date}/*.parquet\".format(base_path = base_path, date = date), dates)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a9d94c23",
    "metadata": {},
    "outputs": [],
    "source": [
     "transactions_df = spark.read.format(\"parquet\") \\\n",
-    "    .load(\"{base_path}/transactions/date={date}/*/*.parquet\".format(base_path = base_path, date = date))"
+    "    .load(list(map(lambda date: \"{base_path}/transactions/date={date}/*.parquet\".format(base_path = base_path, date = date), dates)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "2e8e6de5",
    "metadata": {},
    "outputs": [],
@@ -180,20 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3bc6f03d",
    "metadata": {},
    "outputs": [],
    "source": [
     "cmc_historicals_df = spark.read.format(\"csv\") \\\n",
-    "    .option(\"header\", True) \\\n",
     "    .schema(cmc_historical_schema) \\\n",
-    "    .load(\"s3a://octan-labs-bsc/cmc_historicals/*.csv\")"
+    "    .load(\"./cmc_historicals/*.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1daf2b91",
    "metadata": {},
    "outputs": [],
@@ -201,7 +253,17 @@
     "cmc_addresses_df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
     "    .schema(cmc_address_schema) \\\n",
-    "    .load(\"s3a://octan-labs-bsc/cmc_addresses/*.csv\")"
+    "    .load(\"./cmc_addresses/*.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "581ea759",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmc_addresses_df = cmc_addresses_df.dropDuplicates([\"{name}\".format(name = name)])"
    ]
   },
   {
@@ -214,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "33d2e14e",
    "metadata": {},
    "outputs": [],
@@ -224,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "44c8925e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0d454e12",
    "metadata": {},
    "outputs": [],
@@ -256,17 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "320c0021",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.32025766372680664"
+       "0.11391353607177734"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +343,7 @@
     "start_time = time.time()\n",
     "\n",
     "\n",
-    "result_df = spark.sql(\"\"\"\n",
+    "pre_tx_df = spark.sql(\"\"\"\n",
     "SELECT \n",
     "    tx.block_number,\n",
     "    tx.from_address,\n",
@@ -321,7 +383,7 @@
     "FROM token_transfers tt\n",
     "LEFT JOIN transactions tx ON tt.transaction_hash = tx.hash\n",
     "LEFT JOIN tokens t ON LOWER(tt.token_address) = LOWER(t.address)\n",
-    "LEFT JOIN (SELECT {name}, rank FROM cmc_addresses GROUP BY {name}, rank LIMIT 1) cmc_addr \n",
+    "LEFT JOIN cmc_addresses cmc_addr \n",
     "    ON tt.token_address = cmc_addr.{name}\n",
     "LEFT JOIN cmc_historicals cmc_h \n",
     "    ON (\n",
@@ -354,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "564d4223",
    "metadata": {},
    "outputs": [
@@ -368,10 +430,10 @@
     {
      "data": {
       "text/plain": [
-       "8.26365852355957"
+       "7.278391122817993"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,10 +441,19 @@
    "source": [
     "start_time = time.time()\n",
     "\n",
-    "result_df.repartition(1) \\\n",
+    "pre_tx_df.repartition(1) \\\n",
     "    .write \\\n",
     "    .option(\"header\",True) \\\n",
-    "    .csv(\"{base_path}/pre-tx/date={date}/\".format(base_path = base_path, date = date))\n",
+    "    .csv(\n",
+    "        \"{base_path}/pre_tx/{time_range}/start={start}_end={end}/\" \\\n",
+    "            .format(\n",
+    "                base_path = base_path, \\\n",
+    "                time_range = time_range, \\\n",
+    "                start = start, \\\n",
+    "                end = end \\\n",
+    "            ) \\\n",
+    "    )\n",
+    "\n",
     "\n",
     "time.time() - start_time"
    ]
@@ -397,7 +468,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "c374c19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_tx_df.createOrReplaceTempView(\"pre_tx_df\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a203a0f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
+   "id": "223e6a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09346485137939453"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change name, symbol foreach networks\n",
+    "\n",
+    "import time\n",
+    "from pyspark.sql.functions import format_number\n",
+    "\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "tx_volume_df = spark.sql(\"\"\"\n",
+    "SELECT from_address as address, SUM(volume) as volume FROM pre_tx_df\n",
+    "GROUP BY from_address\n",
+    "UNION ALL\n",
+    "SELECT to_address as address, SUM(volume) as volume FROM pre_tx_df\n",
+    "GROUP BY to_address\n",
+    "UNION ALL\n",
+    "SELECT token_contract as address, SUM(volume) as volume FROM pre_tx_df\n",
+    "GROUP BY token_contract\n",
+    "\"\"\").withColumn('volume', format_number('volume', 10)) \n",
+    "\n",
+    "\n",
+    "time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952565b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f58a4968",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.7644712924957275"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "\n",
+    "tx_volume_df.repartition(1) \\\n",
+    "    .write \\\n",
+    "    .option(\"header\",True) \\\n",
+    "    .csv(\n",
+    "        \"{base_path}/tx_volumes/{time_range}/start={start}_end={end}/\" \\\n",
+    "            .format(\n",
+    "                base_path = base_path, \\\n",
+    "                time_range = time_range, \\\n",
+    "                start = start, \\\n",
+    "                end = end \\\n",
+    "            ) \\\n",
+    "    )\n",
+    "\n",
+    "time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12e4e60b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7503624f",
    "metadata": {},
    "outputs": [],
