fix duplicate spark argument names

--- a/notebooks/pre-tx-and-volume-calculation.ipynb
+++ b/notebooks/pre-tx-and-volume-calculation.ipynb
@@ -15,7 +15,7 @@
     "# parser.add_argument(\"-s\", \"--start\", help=\"Start date to calculate\", required=True)\n",
     "# parser.add_argument(\"-e\", \"--end\", help=\"End date to calculate\", required=True)\n",
     "# parser.add_argument(\"-n\", \"--name\", help=\"Name of chain to calculate [bsc|eth|polygon]\", required=True)\n",
-    "# parser.add_argument(\"-s\", \"--symbol\", help=\"Symbol of chain to calculate [BNB|ETH|MATIC]\", required=True)\n",
+    "# parser.add_argument(\"-sy\", \"--symbol\", help=\"Symbol of chain to calculate [BNB|ETH|MATIC]\", required=True)\n",
     "\n",
     "# args=parser.parse_args()\n",
     "\n",
