--- a/notebooks/UAW-calculation.ipynb
+++ b/notebooks/UAW-calculation.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "base_path = \".\"\n",
-    "start = \"2020-10-31\"\n",
-    "end = \"2020-10-31\""
+    "start = \"2023-07-24\"\n",
+    "end = \"2023-07-24\""
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import StructType, StructField, StringType, LongType, DecimalType, DoubleType\n",
+    "from pyspark.sql.types import StructType, StructField, StringType, LongType, DecimalType, DoubleType, TimestampType\n",
     "from pyspark.sql import SparkSession"
    ]
   },
@@ -112,15 +112,7 @@
    "execution_count": 6,
    "id": "95184970",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/07/17 10:21:45 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
@@ -131,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99082548",
+   "id": "4f18644e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -139,58 +131,83 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "718fb5c4",
+   "id": "f5535806",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Exception while sending command.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/spark/python/lib/py4j-0.10.9.5-src.zip/py4j/clientserver.py\", line 516, in send_command\n",
-      "    raise Py4JNetworkError(\"Answer from Java side is empty\")\n",
-      "py4j.protocol.Py4JNetworkError: Answer from Java side is empty\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/spark/python/lib/py4j-0.10.9.5-src.zip/py4j/java_gateway.py\", line 1038, in send_command\n",
-      "    response = connection.send_command(command)\n",
-      "  File \"/opt/spark/python/lib/py4j-0.10.9.5-src.zip/py4j/clientserver.py\", line 539, in send_command\n",
-      "    raise Py4JNetworkError(\n",
-      "py4j.protocol.Py4JNetworkError: Error while sending or receiving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pre_tx_df = spark.read.format(\"csv\") \\\n",
-    "    .option(\"header\", True) \\\n",
-    "    .load(list(map(lambda date: \"{base_path}/pre-tx/date={date}/*.csv\".format(base_path = base_path, date = date), dates)))"
+    "contracts_schema = StructType([ \\\n",
+    "    StructField(\"address\", StringType(), True), \\\n",
+    "    StructField(\"bytecode\", StringType(), True), \\\n",
+    "    StructField(\"function_sighashes\", StringType(), True), \\\n",
+    "    StructField(\"is_erc20\", StringType(), True), \\\n",
+    "    StructField(\"is_erc721\", StringType(), True), \\\n",
+    "    StructField(\"block_number\", DecimalType(38, 0), True), \\\n",
+    "    StructField(\"block_timestamp\", TimestampType(), True), \\\n",
+    "    StructField(\"block_hash\", StringType(), True), \\\n",
+    "  ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9cb10722",
+   "execution_count": null,
+   "id": "1458fb7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "06cb75b9",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "contract_df = spark.read.format(\"parquet\") \\\n",
-    "    .load(\"{base_path}/contracts/*/*.parquet\".format(base_path = base_path))"
+    "spark.sql(\"set spark.sql.files.ignoreCorruptFiles=true\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "718fb5c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_tx_df = spark.read.format(\"csv\") \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .load(\n",
+    "        \"{base_path}/pre_tx/{time_range}/start={start}_end={end}/\" \\\n",
+    "            .format(\n",
+    "                base_path = base_path, \\\n",
+    "                time_range = time_range, \\\n",
+    "                start = start, \\\n",
+    "                end = end \\\n",
+    "            ) \\\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9cb10722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contract_df = spark.read.format(\"parquet\") \\\n",
+    "    .schema(contracts_schema) \\\n",
+    "    .load(\"{base_path}/contracts/*/*.parquet\".format(base_path = base_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "208411ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "e67730f7",
    "metadata": {},
    "outputs": [],
@@ -213,25 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3e61c551",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16849946975708008"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
-    "result_df = pre_tx_df \\\n",
+    "uaw_result_df = pre_tx_df \\\n",
     "    .sort('to_address') \\\n",
     "    .select('from_address', 'to_address') \\\n",
     "    .filter(col(\"from_address\") != '0x0000000000000000000000000000000000000000') \\\n",
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "fcd12432",
    "metadata": {},
    "outputs": [],
@@ -278,21 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "baef2820",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.06892871856689453"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# start_time = time.time()\n",
     "\n",
@@ -325,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5e9b3568",
    "metadata": {},
    "outputs": [],
@@ -365,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "db677fe4",
    "metadata": {},
    "outputs": [],
@@ -383,32 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "b3b14ac2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6.329843044281006"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "\n",
-    "result_df.repartition(1) \\\n",
+    "uaw_result_df.repartition(1) \\\n",
     "    .write \\\n",
     "    .option(\"header\",True) \\\n",
     "    .csv(\n",
@@ -434,13 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "d1a68d77",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eb0b747",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
