chore: fix unused variable

--- a/notebooks/pre-tx-and-volume-calculation.ipynb
+++ b/notebooks/pre-tx-and-volume-calculation.ipynb
@@ -287,7 +287,6 @@
     "#     .load(\"s3a://octan-labs-bsc/cmc_historicals/*.csv\")\n",
     "# cmc_addresses_df = spark.read.format(\"csv\") \\\n",
     "#     .option(\"header\", True) \\\n",
-    "#     .schema(cmc_address_schema) \\\n",
     "#     .load(\"s3a://octan-labs-bsc/cmc_addresses/*.csv\")"
    ]
   },
@@ -662,7 +661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "[Stage 32:>                                                       (0 + 12) / 25]\r"
      ]
     },
@@ -702,9 +701,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 32:=>(23 + 2) / 25][Stage 34:> (0 + 10) / 25][Stage 36:>  (0 + 0) / 25]\r",
-      "\r",
+      "\r\n",
+      "[Stage 32:=>(23 + 2) / 25][Stage 34:> (0 + 10) / 25][Stage 36:>  (0 + 0) / 25]\r\n",
+      "\r\n",
       "[Stage 32:=>(24 + 1) / 25][Stage 34:> (0 + 11) / 25][Stage 36:>  (0 + 0) / 25]\r"
      ]
     },
@@ -720,9 +719,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 32:=>(24 + 1) / 25][Stage 34:> (1 + 11) / 25][Stage 36:>  (0 + 0) / 25]\r",
-      "\r",
+      "\r\n",
+      "[Stage 32:=>(24 + 1) / 25][Stage 34:> (1 + 11) / 25][Stage 36:>  (0 + 0) / 25]\r\n",
+      "\r\n",
       "[Stage 32:=>(24 + 1) / 25][Stage 34:>(12 + 11) / 25][Stage 36:>  (0 + 0) / 25]\r"
      ]
     },
@@ -745,7 +744,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "[Stage 32:=>(24 + 1) / 25][Stage 34:=>(22 + 3) / 25][Stage 36:>  (0 + 8) / 25]\r"
      ]
     },
