fix reputation score script using graphscope

--- a/notebooks/reputation_calculation_graphscope_minikube_bttc.ipynb
+++ b/notebooks/reputation_calculation_graphscope_minikube_bttc.ipynb
@@ -1302,7 +1302,7 @@
    ],
    "source": [
     "%%time\n",
-    "data_df['block_date']=((data_df['block_number']-block_min-activate_time)/blockperday_set).astype(int) \n",
+    "data_df['block_date']=((data_df['block_number']-block_min)/blockperday_set-activate_time).astype(int) \n",
     "# all block on that day share the same weight\n",
     "data_df"
    ]
